<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="30dp">
    <TextView android:id="@+id/enable_nfc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="50sp"
            android:paddingTop="20dp"
            android:text="@string/nfc_text"
            android:paddingBottom="20dp"/>
    <ToggleButton android:id="@+id/enable_nfc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="50sp"
            android:textOn="@string/nfc_on"
            android:textOff="@string/nfc_off"
           /> 
</LinearLayout>