<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/beam_user_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher"/>
        
    <TextView
        android:id="@+id/beam_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/user_name"
        android:textSize="50sp"
        android:layout_below="@id/beam_user_image"/>
    <TextView
        android:id="@+id/confirm_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/beam_user_name"
        android:text="@string/confirm_order"
        android:textSize="30sp"
        tools:context=".Kegdroid" />

    <TextView
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#0000FF"
        android:gravity="center"
        android:padding="20dp"

        android:layout_below="@id/confirm_order"
        android:text="@string/order"
        android:textSize="50sp"
        tools:context=".Kegdroid" />

    <ImageView
        android:id="@+id/which_tap_direction_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" 
        android:layout_below="@id/order"/>

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/which_tap_direction_arrow"
        android:layout_centerHorizontal="true"
        android:textColor="#FF0000"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/instructions"
        android:textSize="35sp"
        tools:context=".Kegdroid" />

        <Button
            android:id="@+id/dialog_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dialog_cancel_button"
            android:layout_alignBottom="@+id/dialog_cancel_button"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="50dp"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textSize="30sp" />

        <Button
            android:id="@+id/dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/beam_user_image"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="28dp"
            android:layout_marginRight="50dp"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textSize="30sp" />

</RelativeLayout>