<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pane_outer_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="50"
    android:background="@drawable/beer_selection_state"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:padding="32dp" >

    <RelativeLayout
        android:id="@+id/empty_flag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ImageView
            android:id="@+id/empty_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/beer_product_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/image_description"
        android:paddingRight="32dp" />

    <LinearLayout
        android:id="@+id/pane_beer_data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_toRightOf="@id/beer_product_icon"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/beer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-condensed"
            android:lineSpacingMultiplier="0.9"
            android:paddingBottom="8dp"
            android:text="@string/name_of_beer"
            android:textColor="#fff"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/brewery_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/name_of_brewery"
            android:textAllCaps="true"
            android:textColor="@color/accent_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/beer_product_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/beer_style"
            android:textAllCaps="true"
            android:textColor="@color/subtitle_color"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/beer_abv_ibu_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/beer_abv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="40sp"
                android:text="@string/beer_abv"
                android:textAllCaps="true"
                android:textColor="@color/subtitle_color"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/beer_ibu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/beer_ibu"
                android:textAllCaps="true"
                android:textColor="@color/subtitle_color"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

    <RatingBar
        android:id="@+id/beer_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:isIndicator="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/beer_rating_bar"
        android:layout_below="@id/beer_product_icon"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/beer_product_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:scrollbars="vertical"
            android:text="@string/beer_description"
            android:textSize="16sp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/volume_selection_fragment_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

</RelativeLayout>